--- a/style.css
+++ b/style.css
@@ -68,3 +68,11 @@ body
 .item:hover {
   background-color:#992cbb;
 }
+
+.generictext
+			{
+				font-size: 1.5em;
+				color:#dc2307;
+				
+			}
+
