--- a/style.css
+++ b/style.css
@@ -1,20 +1,3 @@
-.centerimage 
-	{
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		width: 50%;
-		border: 0.3em solid #ffb336
-
-	}
-
-	.center{
-		display:block;
-		margin-left:auto;
-		margin-right:auto;
-		width:50%;
-		text-align:center;
-	}
 
 
 #p1
@@ -44,7 +27,7 @@ body
 
 	}
 
-
+/* Menu Bars top of site */
 .menu-bar {
   background-color: #dc2307;
   display: flex;
@@ -69,16 +52,11 @@ body
   background-color:#992cbb;
 }
 
-.generictext
-			{
-				font-size: 1.5em;
-				color:#000000;
-				
-			}
 
 
 
 
+/* Image Gallery */
 			.row {
 				display: flex;
 				flex-wrap: wrap;
@@ -90,6 +68,11 @@ body
 				flex: 25%;
 				max-width: 25%;
 				padding: 0 4px;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				width: 50%;
+				border: 0.3em solid #ffb336
 			  }
 			  
 			  .column img {
@@ -113,3 +96,40 @@ body
 				  max-width: 100%;
 				}
 			  }
+/* General Classes for all pages */
+.centerimage 
+	{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		width: 50%;
+		border: 0.3em solid #ffb336
+
+	}
+
+	.center{
+		display:block;
+		margin-left:auto;
+		margin-right:auto;
+		width:50%;
+		text-align:center;
+	}
+	.generictext
+	{
+		font-size: 1.5em;
+		color:#000000;
+		
+	}
+	.headers 
+			{
+				color:#550ae2;
+				background-color:#f15bdd;
+				font-size:3em;
+				height:8rem;
+				width:8em;
+				font-family:cursive;
+				font-weight:bold;
+				border: 0.1em solid #1c96aa
+				
+
+			}
